-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240799 | 14.0.2 | Douglas Simon | P4 | Resolved | Fixed | b01 |
| JDK-8246604 | 13.0.4 | Douglas Simon | P4 | Resolved | Fixed | b04 |
| JDK-8239230 | 11.0.8-oracle | Douglas Simon | P4 | Resolved | Fixed | b01 |
| JDK-8241289 | 11.0.8 | Douglas Simon | P4 | Resolved | Fixed | b01 |
Single implementor speculation: ensure HotSpot supports diamond shapes.
- backported by
-
JDK-8239230 [JVMCI] Fix single implementor speculation for diamond shapes.
-
- Resolved
-
-
JDK-8240799 [JVMCI] Fix single implementor speculation for diamond shapes.
-
- Resolved
-
-
JDK-8241289 [JVMCI] Fix single implementor speculation for diamond shapes.
-
- Resolved
-
-
JDK-8246604 [JVMCI] Fix single implementor speculation for diamond shapes.
-
- Resolved
-
- duplicates
-
JDK-8238159 Single implementor logic broken for diamond shapes.
-
- Closed
-
- links to
-
Commit
openjdk/panama-foreign/135f2098
(1 links to)