8238190: [JVMCI] Fix single implementor speculation for diamond shapes

Reviewed-by: kvn